Fix bleeding SocMed image on very large resolutions

--- a/themes/BC/assets/sass/_social-media-highlight.scss
+++ b/themes/BC/assets/sass/_social-media-highlight.scss
@@ -10,7 +10,7 @@
     width: 100%;
     object-fit: cover;
     object-position: 0 -250px;
-    min-height: 900px;
+    height: 900px;
 }
 
 @media (max-width: 1199px) {
@@ -20,11 +20,15 @@
 
     .burns-cat-sketch__image {
         object-position: 0;
-        min-height: 600px;
+        height: 550px;
     }
 }
 @media (max-width: 1023px) {
     #socialmedia-highlight .burns-cat-sketch {
+        height: 500px;
+    }
+
+    .burns-cat-sketch__image {
         height: 500px;
     }
 }
